fixed issue with overlapping styling

--- a/style/product-list.css
+++ b/style/product-list.css
@@ -178,7 +178,7 @@ li span {
 }
 
 @media screen and (min-width: 760px) {
-  main {
+  #product-list {
     margin: 0 10vw;
   }
   .product-list {
